<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select_mode" >

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_check"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_record"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_record"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_upload"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_student"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_upload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_student"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txt_studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_upload"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="109dp"
        android:text="@string/txt_studentID"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/input_studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_studentName"
        android:layout_alignBottom="@+id/txt_studentID"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="-58dp"
        android:layout_toRightOf="@id/txt_studentID"
        android:ems="10"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_studentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_studentID"
        android:layout_alignLeft="@+id/txt_studentID"
        android:layout_marginLeft="-4dp"
        android:layout_marginTop="48dp"
        android:text="@string/txt_studentName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/input_studentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_studentName"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="70dp"
        android:layout_toRightOf="@id/txt_studentName"
        android:ems="10"
        android:visibility="invisible" />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/input_studentID"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="190dp"
        android:layout_marginLeft="190dp"
        android:layout_marginBottom="-98dp"
        android:text="@string/btn_confirm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

</RelativeLayout>
