<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team72.Section" >

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btn_classA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_purple"
        android:text="@string/btn_classA"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btn_classB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_classA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_purple"
        android:text="@string/btn_classB"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_classB"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="-138dp"
        android:layout_marginRight="-138dp"
        android:layout_toStartOf="@+id/btn_classB"
        android:layout_toLeftOf="@+id/btn_classB"
        android:background="@android:color/holo_purple"
        android:text="@string/btn_logout"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>